--- a/src/Makefile
+++ b/src/Makefile
@@ -13,13 +13,16 @@ JAVA =	java
 
 all:	src doc
 
-src:	xc.js
+src:	xc.js jslint
+
+jslint:
+	../frameworks/jslint/jslint ../xc.js
 
 doc:	$(DOCDIR)/private/index.html $(DOCDIR)/public/index.html
 
 xc.js:	Makefile $(SRC)
 	cat $(SRC) > ../$@
-	jslint ../xc.js
+
 
 $(DOCDIR)/private/index.html: Makefile $(SRC)
 	$(JAVA) -jar $(JSDOCDIR)/jsrun.jar $(JSDOCDIR)/app/run.js --allfunctions --private -t=$(TEMPLATE) -d=$(DOCDIR)/private $(SRC)
