added mixin for handler/callback regsitration

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 SRC =	core.js base.js util.js error.js xml.js namespaces.js	\
-	mixins/jid.js mixins/roster.js mixins/chat.js mixins/presence.js mixins/discoverable.js mixins/disco.js \
+	mixins/jid.js mixins/roster.js mixins/chat.js mixins/presence.js mixins/disco.js \
+	mixins/discoverable.js mixins/handler-registration.js \
   services/roster.js services/chat.js services/presence.js services/disco.js	\
 	entity.js message.js mixins/chat_state_notification.js	\
 	connection_adapter.js connection.js
