Moved custom presence object to be a PresenceStanza.

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ SRC =	license.js core.js base.js util.js error.js	\
 	mixins/presence.js mixins/disco.js mixins/discoverable.js	\
 	mixins/handler_registration.js mixins/chat_state_notification.js	\
 	services/roster.js services/chat.js services/presence.js services/disco.js	\
-	entity.js stanza.js message.js \
+	entity.js stanza.js message_stanza.js presence_stanza.js \
 	connection_adapter.js connection.js strophe_adapter.js
 
 DOCDIR = ../doc
