--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ SRC =	license.js core.js base.js util.js error.js	\
 	mixins/presence.js mixins/disco.js mixins/chat_state_notification.js	\
 	services/roster.js services/chat.js services/presence.js services/disco.js	\
 	mixins/v_card.js services/v_card.js	\
-	entity.js stanza.js message_stanza.js presence_stanza.js \
+	entity.js stanza.js mixins/delayed_delivery.js message_stanza.js presence_stanza.js \
 	connection_adapter.js connection.js strophe_adapter.js
 
 DOCDIR = ../doc
